--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ts-node ./server.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
     "typescript": "^5.0.3"
   },
   "dependencies": {
-    "@prisma/client": "^4.12.0"
+    "@prisma/client": "^4.12.0",
+    "@types/node": "^18.15.11",
+    "express": "^4.18.2",
+    "ts-node": "^10.9.1"
   }
 }
