--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node ./server.ts"
+    "start": "npx nodemon server.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
@@ -17,7 +18,12 @@
   "dependencies": {
     "@prisma/client": "^4.12.0",
     "@types/node": "^18.15.11",
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "express-validator": "^6.15.0",
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   }
 }
