--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "npx nodemon server.ts"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
@@ -13,6 +16,7 @@
     "@types/express": "^4.17.17",
     "nodemon": "^2.0.22",
     "prisma": "^4.12.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   },
   "dependencies": {
@@ -23,7 +27,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^6.15.0",
-    "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   }
 }
