--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@types/body-parser": "^1.19.2",
     "@types/node": "^18.15.11",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
